fix anchor jump tags

--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -10,3 +10,8 @@ $black: #000;
 $white: #fefefe;
 
 $base-body-font: 'Raleway', sans-serif;
+
+a[name="jump"] {
+  width: 0;
+  height: 0;
+}
